--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,7 @@
-amqp==5.1.1
-asgiref==3.7.2
-attrs==23.1.0
-billiard==4.1.0
-celery==5.3.4
-click==8.1.7
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.3.0
-Django==4.2.5
+django==4.2.5
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
-drf-spectacular==0.26.4
-drf-spectacular-sidecar==2023.9.1
-inflection==0.5.1
-jsonschema==4.19.1
-jsonschema-specifications==2023.7.1
-kombu==5.3.2
-prompt-toolkit==3.0.39
 psycopg2-binary==2.9.7
-PyJWT==2.8.0
-python-dateutil==2.8.2
-pytz==2023.3.post1
-PyYAML==6.0.1
-redis==4.6.0
-referencing==0.30.2
-rpds-py==0.10.3
-six==1.16.0
-sqlparse==0.4.4
-tzdata==2023.3
-uritemplate==4.1.1
-vine==5.0.0
-wcwidth==0.2.6
+drf-spectacular==0.26.4
+celery[redis]==5.3.4
+python-environ==0.4.54
